# agentguard

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agentguard/: __init__.py  breaker.py  cli.py  exceptions.py  export.py  guard.py  models.py  pricing.py  recorder.py  session.py  similarity.py  storage.py  streaming.py
agentguard/dashboard/: app.py
agentguard/dashboard/static/: app.js  style.css
agentguard/dashboard/templates/: index.html  session.html  stats.html
agentguard/extractors/: __init__.py  anthropic.py  base.py  generic.py  openai.py
agentguard/integrations/: fastapi.py  langchain.py  openai.py
agentguard/rules/: __init__.py  base.py  budget.py  loop.py  scope.py  timeout.py  turns.py
examples/: basic_openai.py  callbacks.py  fastapi_agent.py  langchain_agent_loop.py  langchain_basic.py  openai_guarded.py
tests/: conftest.py  test_async.py  test_callbacks.py  test_cli.py  test_dashboard.py  test_export.py  test_extractors.py  test_fastapi_integration.py  test_guard.py  test_langchain_integration.py  test_metadata.py  test_openai_integration.py  test_parent_session.py  test_pricing.py  test_rules.py  test_session.py  test_similarity.py  test_storage.py  test_streaming.py  test_warnings.py
