[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.2.0"
description = "The black box + circuit breaker for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Salik El Bachir", email = "salik.elbachir@gmail.com" },
]
keywords = ["ai", "agents", "observability", "circuit-breaker", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
]
langchain = [
    "langchain-core>=0.2",
]
openai = [
    "openai>=1.0",
]
fastapi = [
    "fastapi>=0.100",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
    "langchain-core>=0.2",
    "openai>=1.0",
]

[project.scripts]
agentguard = "agentguard.cli:main"

[project.urls]
Homepage = "https://github.com/salikelbachir/agentguard"
Repository = "https://github.com/salikelbachir/agentguard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
